--- a/index.html
+++ b/index.html
@@ -10,5 +10,23 @@
 </head>
 <body>
     
+
+    <footer>
+        <div>
+            <i class="fas fa-globe-europe"></i>
+            <h2>We are United</h2>
+            <a href="#">Read more..</a>
+        </div>
+        <div>
+            <i class="fas fa-heart"></i>
+            <h2>Amazing Design</h2>
+            <a href="#">Read more..</a>
+        </div>
+        <div>
+            <i class="fas fa-ticket-alt"></i>
+            <h2>Customers service</h2>
+            <a href="#">Read more..</a>
+        </div>
+    </footer>
 </body>
 </html>
