main + css Cloé

--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Exo 1 Git</title>
-
+    <script src="https://kit.fontawesome.com/4374c645d6.js" crossorigin="anonymous"></script>
+    <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
-    
+    <main>
+        <h1><i class="fas fa-star"></i><br/>
+        The Winner <strong>Solution</strong>.</h1>
+        <p>
+            Please note : Outlook doesn't support background images, in their system you'll see a solid background color.
+            <button type="button"><a href="" title="Visit us Today">Visit us Today</a></button>
+        </p>
+    </main>
 </body>
 </html>
