--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
+    <header><h3>Passion</h3>
+         <h4><a href="#">check the online version</a></h4></header>
     <main>
         <h1><i class="fas fa-star"></i><br/>
         The Winner <strong>Solution</strong>.</h1>
