--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <h3>Passion</h3>
         <h4>
-            <a href="#">check the online version</a>
+            <a href="#">Check the online version</a>
         </h4>
     </header>
     <main>
